# maze

./: 10x10  app.py  maze_threader.py  pyproject.toml  requirements.txt
maze_primitives/: draw_maze.py  main.py  maze.py
